Dropdown is fixed on mobile

--- a/src/components/EssentialApplicantInfo/EssentialApplicantInfo.css
+++ b/src/components/EssentialApplicantInfo/EssentialApplicantInfo.css
@@ -52,6 +52,10 @@
         float: left;
     }
 
+    #courseSelection{
+        width: 250px!important;
+    }
+
 
 }
 
